# cryptoapi

./: .flake8  .gitignore  .pylintrc  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
src/cryptoapi/: __init__.py
src/cryptoapi/api/entities/: __init__.py  candle.py  command.py  equity.py  index_price.py  instrument.py  operations.py  order.py  position.py  quotes.py
src/cryptoapi/api/exceptions/: __init__.py  base.py  connection.py  mapping.py
src/cryptoapi/api/interfaces/: __init__.py  clients.py  exchange.py
src/cryptoapi/api/internal/: __init__.py  mapper.py
src/cryptoapi/tools/: mapper.py  timestamp.py
tests/: conftest.py  test_base_http_client.py  test_base_wss_client.py
tests/files/binance/: instruments_coinm.json  instruments_usdm.json
tests/files/deribit/: auth_success.json  buy_btc_perpetual.json  cancel_all_btc_perpetual.json  check_creds_invalid_api_keys.json  check_creds_invalid_scope.json  close_position_btc_perpetual.json  deposits_btc.json  equity_btc.json  index_price_btc_usd.json  instruments_btc.json  instruments_eth.json  instruments_usdc.json  instruments_usdt.json  position_btc_perpetual.json  sell_btc_perpetual.json  ticker_btc_perpetual.json  tradingview_chart_data_btc_perpetual.json  transfers_btc.json  withdrawals_btc.json
tests/integration/deribit/: conftest.py  fixtures.py  test_auth.py  test_cancel_all.py  test_candles.py  test_close_position.py  test_credentials.py  test_equity.py  test_index_price.py  test_instruments.py  test_operation_summary.py  test_order.py  test_position.py  test_quotes.py
tests/mocks/: __init__.py  server.py
tests/unit/deribit/: conftest.py  mock.py  test_wss.py
(+42 files in other folders)
