[tool.poetry]
name = "cryptoapi"
version = "1.0.0"
description = "An internal library for integration with the API of cryptocurrency exchanges"
authors = ["Mera Capital"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
