[tool.poetry]
name = "cryptoapi"
version = "1.0.0"
description = "An internal library for integration with the API of cryptocurrency exchanges"
authors = ["Mera Capital"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
adaptix = "^3.0.0b1"
aiohttp = "^3.9.1"
certifi = "^2023.11.17"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
