[tool.poetry]
name = "cryptoapi"
version = "1.0.0"
description = "An internal library for integration with the API of cryptocurrency exchanges"
authors = ["Mera Capital"]
license = "MIT"
readme = "README.md"
packages = [{include = "cryptoapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
adaptix = "^3.0.0b1"
aiohttp = "^3.9.1"
certifi = "^2023.11.17"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
aioresponses = "^0.7.6"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
